ghc-6.2/hslibs/win32/Win32Control_stub_ffi.h

extern DWORD prim_pBM_DELTAPOS();
extern DWORD prim_pBM_SETPOS();
extern DWORD prim_pBM_SETRANGE();
extern DWORD prim_pBM_SETSTEP();
extern DWORD prim_pBM_STEPIT();