ghc-6.2/hslibs/win32/Win32Control.hs


%const CommonControl
% [ ToolTipsControl = {TOOLTIPS_CLASS}
% , TrackBarControl = {TRACKBAR_CLASS}
% , UpDownControl  = {UPDOWN_CLASS}
% , ProgressBarControl = {PROGRESS_CLASS}
% , HotKeyControl  = {HOTKEY_CLASS}
% , AnimateControl     = {ANIMATE_CLASS}
% , StatusControl     =  {STATUSCLASSNAME}
% , HeaderControl     =  {WC_HEADER}
% , ListViewControl   =  {WC_LISTVIEW}
% , TabControl        =  {WC_TABCONTROL}
% , TreeViewControl   =  {WC_TREEVIEW}
% , MonthCalControl    = {MONTHCAL_CLASS}
% , DateTimePickControl = {DATETIMEPICK_CLASS}
% , ReBarControl      =  {REBARCLASSNAME}
-- Not supplied in mingw-20001111
--% , ComboBoxExControl =  {WC_COMBOBOXEX}
--% , IPAddressControl  =  {WC_IPADDRESS}
--% , PageScrollerControl = {WC_PAGESCROLLER}
% ]

%fun createCommonControl
%    :: CommonControl -> WindowStyle -> String -> WindowStyle
%    -> MbPos -> MbPos -> MbPos -> MbPos 
%    -> MbHWND -> MbHMENU -> HANDLE 
%    -> IO HWND
%call (commonControl c) (windowStyle estyle) (string nm) (windowStyle wstyle)
%     (mbPos x) (mbPos y) (mbPos w) (mbPos h) 
%     (mbHWND parent) (mbHMENU hmenu) (hANDLE handle)
%code hwnd = CreateWindowEx(estyle, c, nm,wstyle,x,y,w,h,parent,hmenu,handle,NULL);
%fail { hwnd == NULL } { ErrorWin("CreateCommonControl") }
%result (hWND hwnd)

%fun InitCommonControls :: IO ()

-}

foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_pBM_DELTAPOS" pBM_DELTAPOS :: WindowMessage
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_pBM_SETPOS" pBM_SETPOS :: WindowMessage
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_pBM_SETRANGE" pBM_SETRANGE :: WindowMessage
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_pBM_SETSTEP" pBM_SETSTEP :: WindowMessage
foreign import  ccall unsafe "Win32Control_stub_ffi.h prim_pBM_STEPIT" pBM_STEPIT :: WindowMessage

-- % , PBM_GETRANGE
-- % , PBM_GETPOS
-- % , PBM_SETBARCOLOR
-- % , PBM_SETBKCOLOR
-- % , PBM_SETRANGE32
